[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game/Objects/Dummy/Dummy.png" type="Texture" id=1]
[ext_resource path="res://Game/Objects/Dummy/Dummy.gd" type="Script" id=2]
[ext_resource path="res://Game/Parent/Character.tscn" type="PackedScene" id=3]
[ext_resource path="res://Misc/greyscale.shader" type="Shader" id=4]
[ext_resource path="res://Misc/Fonts/Neufreit-ExtraBold.otf" type="DynamicFontData" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 48.2688

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/enabled = false

[sub_resource type="StyleBoxFlat" id=3]
resource_local_to_scene = true
bg_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.996078, 0.705882, 0, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=4]
resource_local_to_scene = true
bg_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.996078, 0.705882, 0, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 5 )

[node name="Dummy" instance=ExtResource( 3 )]
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Graphics" parent="." index="1"]
material = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Graphics" index="0"]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Main" parent="UI" index="0"]
visible = false

[node name="VBoxContainer" parent="UI/Main/CenterContainer2" index="0"]
margin_top = 36.0
margin_bottom = 60.0

[node name="Ability1" parent="UI/Main/CenterContainer2/VBoxContainer/Abilities/HBoxContainer" index="0"]
custom_styles/panel = SubResource( 3 )

[node name="Ability2" parent="UI/Main/CenterContainer2/VBoxContainer/Abilities/HBoxContainer" index="1"]
custom_styles/panel = SubResource( 4 )

[node name="Tag" parent="." index="5"]
visible = false

[node name="DamageReadout" type="Node2D" parent="." index="13"]
position = Vector2( 0, 60 )

[node name="VBoxContainer" type="VBoxContainer" parent="DamageReadout" index="0"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LastHit" type="Label" parent="DamageReadout/VBoxContainer" index="0"]
margin_right = 40.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
align = 1

[node name="Total" type="Label" parent="DamageReadout/VBoxContainer" index="1"]
margin_top = 32.0
margin_right = 40.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
align = 1

[node name="DamageTime" type="Timer" parent="." index="14"]
wait_time = 3.0
one_shot = true
[connection signal="timeout" from="DamageTime" to="." method="_on_DamageTime_timeout"]
